@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1842 2007/08/20 11:25:28 abs Exp $
+$NetBSD: CHANGES-2007,v 1.1843 2007/08/20 11:35:15 abs Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -3375,3 +3375,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated mail/policyd to 1.82 [ghen 2007-08-20]
 	Updated security/py-denyhosts to 2.6nb2 [taca 2007-08-20]
 	Updated devel/cpuflags to 1.10 [abs 2007-08-20]
+	Updated devel/cpuflags to 1.11 [abs 2007-08-20]
